crates/eventric-domain/tests/ui/projection_empty_events.stderr
error: selection `thing` has an empty `events` list
 --> tests/ui/projection_empty_events.rs:4:28
  |
4 | #[projection(selections: { thing: { events: [] } })]
  |                            ^^^^^
