crates/eventric-domain/tests/ui/projection_empty_events.rs
use eventric_domain::projection::Projection;

#[derive(Projection)]
#[projection(selections: { thing: { events: [] } })]
struct Bar;

fn main() {}
